# Mezan

./: .dockerignore  .gitattributes  .gitignore  DECISIONS.md  DIVERGENCES.md  GAP_REPORT.md  OFFLINE_POS.md  PROJECT_STATE.md  README.md  SYSTEM_REVIEW.md  WEB_FRONTEND_PLAN.md  crud_logs.txt  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.web.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  main.py  models.py
backups/: last_backup_status.json  mezan_20260601_234433.dump  mezan_20260608_213347.dump  mezan_20260623_134850.dump  mezan_20260701_131450.dump
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  entrypoint.sh  uvicorn-dev.sh
docs/: ADMIN_ROLE_ACCESS.md  ANALYSIS.md  CATALOG_INVENTORY_PURCHASING_AND_POS.md  CODEBASE_ARCHITECTURE_AR.md  GRADUATION_PROJECT_OVERVIEW_AR.md  PRODUCT_ATTRIBUTES_AND_VARIANTS.md  SYSTEM_ROLES_ACCESS.md
mobile/: MANUAL_TEST_CHECKLIST.md  README.md  pubspec.yaml
scripts/: gen_coa_ar_map.py
tests/: README.md  api_response_helpers.py  conftest.py  test_ap_supplier_balances.py  test_api_pagination.py  test_attendance_devices_api.py  test_attendance_log_payroll_impact.py  test_attendance_logs_pagination.py  test_attendance_policy_snapshot.py  test_audit_logs_api.py  test_auth_login_validation.py  test_auth_permissions_endpoint.py  test_backup_history.py  test_bootstrap_admin_protection.py  test_branch_archival.py  test_branch_cash_accounts.py  test_branch_kind_rules.py  test_cash_rounding.py  test_catalog_attribute_delete.py  test_catalog_attribute_inheritance.py  (+91 more)
(+1341 files in other folders)
